# Vietnamese_CLIP

./: README.md  pyproject.toml  run_all.py
configs/: default.yaml
scripts/: download_data.sh  run_experiments.sh
src/viet_clip/: __init__.py  dataset.py  evaluate.py  loss.py  train.py  utils.py
src/viet_clip/models/: __init__.py  clip_model.py  image_encoder.py  text_encoder.py
